--- a/src/pages/login/login.sass
+++ b/src/pages/login/login.sass
@@ -1,5 +1,5 @@
 
-.registration
+.login
   width: 340px
   height: 450px
   border-radius: 1.2rem
@@ -8,15 +8,15 @@
   justify-content: start
   flex-direction: column
   align-items: center
-  height: 615px
-  &__button-wrapper
-    padding-top: 1.6rem
-    display: flex
-    width: 316px
-    justify-content: space-between
+  height: 450px
   &__wrapper
     display: flex
     justify-content: center
     align-items: center
     flex-direction: column
     height: 100%
+  &__button-wrapper
+    padding-top: 9rem
+    display: flex
+    width: 316px
+    justify-content: space-between
