--- a/src/pages/chats/chats.hbs
+++ b/src/pages/chats/chats.hbs
@@ -2,9 +2,9 @@
   <aside class="chats__aside">
     <div class="chats__top-btns"> <button class="button chats__button button_b-r-5px
     button_blue">Профиль</button> <button class="button chats__button
-    button_b-r-5px button_grey"> <img src="../../static/img/Search.svg" alt="Поиск" class="chats__img"> Поиск </button>
+    button_b-r-5px button_grey"> <img src={{svgDefault.svgSearch}} alt="Поиск" class="chats__img"> Поиск </button>
       <div class="chats__search
-    display-none"> <img src="../../static/img/Search.svg" alt="Поиск" class="chats__img absolute"> <input
+    display-none"> <img src={{svgDefault.svgSearch}} alt="Поиск" class="chats__img absolute"> <input
           class="chats__search-input button_grey" type="text" placeholder="Поиск"> </div>
     </div>
     <div class="chats__list-of-chats">
@@ -30,32 +30,32 @@
   </aside>
   <main class="chats">
     <header class="chats__header">
-      <div class="chats__current-chat"> <img class="chats__current-chat-pic" src="../../static/img/Chat-picture.svg"
-          alt="картинка выбраного чата">
+      <div class="chats__current-chat">
+        <img class="chats__current-chat-pic" src={{svgDefault.svgDefaultChatPic}} alt="картинка выбраного чата">
         <p class="chats__current-chat-name">Андрей</p>
-      </div> <img class="chats__menu-btn" src="../../static/img/Menu.svg" alt="меню">
+      </div> <img class="chats__menu-btn" src={{svgDefault.svgMenu}} alt="меню">
     </header>
     <menu class="chats__menu">
       <div class="chats__menu-content" id="chats">
-        <div class="chats__menue-item"> <img src="../../static/img/Create-chat.svg" alt="Создать чат"
+        <div class="chats__menue-item"> <img src={{svgDefault.svgCreateChat}} alt="Создать чат"
             class="chats__menue-item-img">
           <p class="chats__menue-item-action">Создать чат</p>
         </div>
-        <div class="chats__menue-item"> <img src="../../static/img/Delete-chat.svg" alt="Удалить чат"
+        <div class="chats__menue-item"> <img src={{svgDefault.svgDeleteChat}} alt="Удалить чат"
             class="chats__menue-item-img">
           <p class="chats__menue-item-action">Удалить чат</p>
         </div>
-        <div class="chats__menue-item"> <img src="../../static/img/Change-ava-chat.svg" alt="Изменить аватар чата"
+        <div class="chats__menue-item"> <img src={{svgDefault.svgChangeChat}} alt="Изменить аватар чата"
             class="chats__menue-item-img">
           <p class="chats__menue-item-action">Изменить аватар чата</p>
         </div>
       </div>
       <div class="chats__menu-content display-none" id="one-chat">
-        <div class="chats__menue-item"> <img src="../../static/img/Create-chat.svg" alt="Добавить пользователя"
+        <div class="chats__menue-item"> <img src={{svgDefault.svgCreateChat}} alt="Добавить пользователя"
             class="chats__menue-item-img">
           <p class="chats__menue-item-action">Добавить пользователя</p>
         </div>
-        <div class="chats__menue-item"> <img src="../../static/img/Delete-chat.svg" alt="Удалить пользователя"
+        <div class="chats__menue-item"> <img src={{svgDefault.svgDeleteChat}} alt="Удалить пользователя"
             class="chats__menue-item-img">
           <p class="chats__menue-item-action">Удалить пользователя</p>
         </div>
@@ -65,24 +65,23 @@
       <div class="chats__messages">
         <menu class="file-menu">
           <div class="chats__menu-content">
-            <div class="chats__menue-item"> <img src="../../static/img/Video-or-foto.svg" alt="Фото или видео"
+            <div class="chats__menue-item"> <img src={{svgDefault.svgAddVideoOrFoto}} alt="Фото или видео"
                 class="chats__menue-item-img">
               <p class="chats__menue-item-action">Фото или видео</p>
             </div>
-            <div class="chats__menue-item"> <img src="../../static/img/File.svg" alt="Файл"
-                class="chats__menue-item-img">
+            <div class="chats__menue-item"> <img src={{svgDefault.svgAddFile}} alt="Файл" class="chats__menue-item-img">
               <p class="chats__menue-item-action">Файл</p>
             </div>
-            <div class="chats__menue-item"> <img src="../../static/img/Location.svg" alt="Локация"
+            <div class="chats__menue-item"> <img src={{svgDefault.svgAddLocation}} alt="Локация"
                 class="chats__menue-item-img">
               <p class="chats__menue-item-action">Локация</p>
             </div>
           </div>
         </menu>
       </div>
-      <footer class="chats__footer"> <img class="chats__file-menu" src="../../static/img/Image.svg" alt="Прикрепить
+      <footer class="chats__footer"> <img class="chats__file-menu" src={{svgDefault.svgSendFile}} alt="Прикрепить
     файл"> <input class="chats__input" type="text" placeholder="Сообщение">
-        <button class="chats__send-btn"> <img class="chats__send" src="../../static/img/Arrow-right.svg"
+        <button class="chats__send-btn"> <img class="chats__send" src={{svgDefault.svgArrowRight}}
             alt="Прикрепить файл"> </button>
       </footer>
     </section>
