--- a/src/pages/chats/chats.sass
+++ b/src/pages/chats/chats.sass
@@ -43,6 +43,12 @@
     &:nth-of-type(2)
       background-color: #EFEFEF
       color: #999999
+  &__link-to-profile
+    color: white
+    text-decoration: none
+    display: block
+    width: 100%
+
   &__img
     margin-right: 4px
   &__search
