html & css done, but wrong with hbs partials, I use {{{}}}

--- a/src/pages/chats/chats.hbs
+++ b/src/pages/chats/chats.hbs
@@ -1,9 +1,10 @@
+{{{modal}}}
 <div class="chats__wrapper">
   <aside class="chats__aside">
     <div class="chats__top-btns">
       <button class="button chats__button button_b-r-5px button_blue"><a
           class="chats__link-to-profile"
-          href="../profile/index.html"
+          href="../profile/profile.html"
         > Профиль</a>
       </button>
       <button class="button chats__button button_b-r-5px button_grey">
