--- a/src/pages/login.hbs
+++ b/src/pages/login.hbs
@@ -23,7 +23,7 @@
     </form>
     <div class="login__button-wrapper">
       <button class="button button_grey button_auth button_b-r-8px"><a
-          href="../registration/index.html"
+          href="./registration/registration.html"
           class="login__link-to-reg button"
         >Впервые?</a></button>
       <button
