--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -1,6 +1,6 @@
 <div class="profile__wrapper">
   <aside class="profile__go-back">
-    <a class="profile__link" href="../chats/index.html">
+    <a class="profile__link" href="../chats/chats.html">
       <img
         src={{svg.svgArrowLeft}}
         alt="Аватар пользователя"
@@ -75,7 +75,7 @@
             Изменить пароль
           </button>
           <button class="profile__change-data profile__change-data_red">
-            <a class="profile__link-to-login" href="../login/index.html">Выйти
+            <a class="profile__link-to-login" href="../index.html">Выйти
             </a>
 
           </button>
