--- a/src/pages/registration/registration.hbs
+++ b/src/pages/registration/registration.hbs
@@ -44,7 +44,7 @@
     </form>
     <div class="registration__button-wrapper">
       <button class="button button_grey button_auth button_b-r-8px"><a
-          href="../chats/index.html"
+          href="../chats/chats.html"
           class="button"
         >Войти</a>
       </button>
