--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -3,7 +3,9 @@
   src: url('./fonts/Inter-Medium.ttf') format('truetype')
   font-weight: normal
   font-style: normal
-@import url('./modalWindow')
+
+@import ./modalWindow
+
 *
   box-sizing: border-box
   padding: 0
