final part: logic hide show Modal window

--- a/src/components/modal-window/modalWindow.hbs
+++ b/src/components/modal-window/modalWindow.hbs
@@ -1,4 +1,4 @@
-<section class="modal-window display-none">
+<section class="modal-window display-none" id="modal-window">
   <div class="modal-window__wrapper"></div>
   <div
     class="modal-window__container"
