--- a/src/pages/chats/chats.sass
+++ b/src/pages/chats/chats.sass
@@ -152,6 +152,9 @@
   &__menu-btn
     padding-left: 20px
     cursor: pointer
+    height: 20px
+    margin-top: 20px
+
   &__menu
     position: absolute
     width: 210px
