--- a/src/pages/profile/profile.sass
+++ b/src/pages/profile/profile.sass
@@ -25,6 +25,9 @@
     display: flex
     margin: 0 auto
     text-decoration: none
+    align-items: center
+    &-to-login
+      text-decoration: none
   &__arrow
     color: #ffffff
     margin: 0 auto
