--- a/src/pages/registration/registration.hbs
+++ b/src/pages/registration/registration.hbs
@@ -12,23 +12,23 @@
         Логин
       </label>
       <input name="login" class="input" type="text" placeholder="Логин" />
-      <label class="form-label" for="name">
+      <label class="form-label" for="first_name">
         Имя
       </label>
-      <input name="name" class="input" type="text" placeholder="Имя" />
-      <label class="form-label" for="second-name">
+      <input name="first_name" class="input" type="text" placeholder="Имя" />
+      <label class="form-label" for="second_name">
         Фамилия
       </label>
       <input
-        name="second-name"
+        name="second_name"
         class="input"
         type="text"
         placeholder="Фамилия"
       />
-      <label class="form-label" for="tel">
+      <label class="form-label" for="phone">
         Телефон
       </label>
-      <input name="tel" class="input" type="tel" placeholder="Телефон" />
+      <input name="phone" class="input" type="tel" placeholder="Телефон" />
       <label class="form-label" for="password">
         Пароль
       </label>
