test netify deploy3

--- a/src/pages/login.hbs
+++ b/src/pages/login.hbs
@@ -1,8 +1,5 @@
 <div class="login__wrapper">
-  <main class="login"><div class="title-wrapper"><h1
-        class="login-registration__title"
-      >Вход</h1>
-    </div>
+  <main class="login"><div class="title-wrapper"><h1 class="login-registration__title" >Вход</h1></div>
     <form class="form" id="login-form">
       <label class="form-label" for="login">
         Логин
