try to deplou to netify

--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -100,7 +100,7 @@
             Изменить пароль
           </button>
           <button class="profile__change-data profile__change-data_red">
-            <a class="profile__link-to-login" href="../index.html">Выйти
+            <a class="profile__link-to-login" href="../login/index.html">Выйти
             </a>
 
           </button>
