--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,5 +1,7 @@
 <div class="login__wrapper">
-  <main class="login"><div class="title-wrapper"><h1 class="login-registration__title" >Вход</h1></div>
+  <main class="login"><div class="title-wrapper"><h1
+        class="login-registration__title"
+      >Вход</h1></div>
     <form class="form" id="login-form">
       <label class="form-label" for="login">
         Логин
@@ -20,7 +22,7 @@
     </form>
     <div class="login__button-wrapper">
       <button class="button button_grey button_auth button_b-r-8px"><a
-          href="./registration/registration.html"
+          href="../registration/registration.html"
           class="login__link-to-reg button"
         >Впервые?</a></button>
       <button
