changes after review

--- a/src/pages/chats/chats.hbs
+++ b/src/pages/chats/chats.hbs
@@ -2,10 +2,9 @@
 <div class="chats__wrapper">
   <aside class="chats__aside">
     <div class="chats__top-btns">
-      <button class="button chats__button button_b-r-5px button_blue"><a
-          class="chats__link-to-profile"
-          href="../profile/profile.html"
-        > Профиль</a>
+      <button class="button chats__button button_b-r-5px button_blue">
+        <a class="chats__link-to-profile" href="../profile/profile.html">
+          Профиль</a>
       </button>
       <button class="button chats__button button_b-r-5px button_grey">
         <img src={{svgDefault.svgSearch}} alt="Поиск" class="chats__img" />
