troble with render

--- a/src/pages/test-page-for-dev/test.hbs
+++ b/src/pages/test-page-for-dev/test.hbs
@@ -1,4 +1,5 @@
 {{{modal}}}
+{{{btn}}}
 <div class="chats__wrapper">
   <aside class="chats__aside">
     <div class="chats__top-btns">
@@ -62,14 +63,7 @@
     </header>
     <menu class="chats__menu">
       <div class="chats__menu-content" id="chats">
-        <div class="chats__menue-item">
-          <img
-            src={{svgDefault.svgCreateChat}}
-            alt="Создать чат"
-            class="chats__menue-item-img"
-          />
-          <p class="chats__menue-item-action">Создать чат</p>
-        </div>
+        {{{btn}}}
         <div class="chats__menue-item">
           <img
             src={{svgDefault.svgDeleteChat}}
