--- a/src/components/modal-window/modalWindow.hbs
+++ b/src/components/modal-window/modalWindow.hbs
@@ -1,5 +1,5 @@
 <section class="modal-window display-none" id="modal-window">
-  <div class="modal-window__wrapper"></div>
+  <div id="modal-window__wrapper" class="modal-window__wrapper"></div>
   <div
     class="modal-window__container display-none"
     id="modal-window-create-chat"
