--- a/src/styles/modalWindow.sass
+++ b/src/styles/modalWindow.sass
@@ -16,9 +16,13 @@ html
   width: 100vw
   height: 100vh
   position: fixed
+  top: 0
+  left: 0
   display: flex
   justify-content: center
+
   align-items: center
+
   &__wrapper
     position: absolute
     width: 100vw
