--- a/src/pages/chats/chats.sass
+++ b/src/pages/chats/chats.sass
@@ -169,6 +169,7 @@
     display: flex
     align-items: center
     margin-bottom: 14px
+    cursor: pointer
     &:last-of-type
       margin-bottom: 0
     &-img
