--- a/src/pages/messages/messages.sass
+++ b/src/pages/messages/messages.sass
@@ -1,3 +1,29 @@
+.message
+  align-self: start
+  color: #1E1E1E
+  font-style: normal
+  font-weight: 500
+  font-size: 12px
+  line-height: 15px
+  background: #F8F8F8
+  max-width: 40rem
+  border-radius: 7px
+  border-top-left-radius: 0
+
+  &__my
+    background: #E4EDFD
+    align-self: end
+    border-bottom-right-radius: 0
+
+  &__time
+    font-family: Inter
+    font-style: normal
+    font-weight: 500
+    font-size: 9px
+    line-height: 9px
+    text-align: right
+    &_readed
+      color: #3369F3
 .chats
   flex-grow: 1
   display: flex
