--- a/src/pages/messages/components/bottomMenu/bottom-menu.hbs
+++ b/src/pages/messages/components/bottomMenu/bottom-menu.hbs
@@ -1,6 +1,6 @@
-<menu class="chats__menu">
-  <div class="chats__menu-content display-none" id="chats">
-    {{#each parentsProps.topMenuButtons}}
+<menu class="file-menu display-none" id="two-chat">
+  <div class="chats__menu-content">
+    {{#each parentsProps.messagesBottomMenuButtons}}
       <div class="chats__menue-item" id={{actionId}}>
         <img src={{iconSvg}} alt="#" class="chats__menue-item-img" />
         <p class="chats__menue-item-action">{{actionTitle}}</p>
