--- a/src/pages/profile/profile.sass
+++ b/src/pages/profile/profile.sass
@@ -88,6 +88,8 @@
     border-left: none
     border-top: none
     flex-grow: 1
+    &:disabled
+      background-color: white
   &__control-wrapper
     width: 100%
     display: flex
