--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -1,4 +1,3 @@
-{{{modal}}}
 <div class="profile__wrapper">
   <aside class="profile__go-back">
     <a class="profile__link" href="../chats/chats.html">
@@ -15,7 +14,11 @@
         <form class="profile__form" id="profile">
           <div class="profile__field">
             <label class="profile__label mb-1rem" for="email">Почта</label>
-            <input disabled class="profile__input mb-1rem" type="text" name="email" value={{emailValue}} />
+            {{#if disabledInputs}}
+              <input disabled class="profile__input mb-1rem" type="email" name="email" value={{emailValue}} />
+            {{else}}
+              <input class="profile__input mb-1rem" type="email" name="email" value={{emailValue}} />
+            {{/if}}
           </div>
           <div class="profile__field">
             <label class="profile__label mb-1rem" for="login">Логин</label>
@@ -48,3 +51,4 @@
       </div>
   </main>
 </div>
+{{{modal}}}
