--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -34,7 +34,7 @@ html
 .form-warning-text
   font-weight: normal
   font-size: 1.1rem
-  line-height: 3rem
+  line-height: 1.1rem
   color: #FF2F2F
 
 .form-warning_pt-3rem
@@ -45,9 +45,10 @@ html
 
 .form
   padding-top: 4rem
-  width: 280px
+  width: 100%
   display: flex
   flex-direction: column
+  align-items: center
 
 .form-label
   font-weight: normal
@@ -55,7 +56,10 @@ html
   line-height: .9rem
   color: #999999
   margin-bottom: .8rem
-
+.wrapper-input-and-label
+  display: flex
+  flex-direction: column
+  width: 280px
 .input
   border: none
   border-bottom: 1px solid #3369F3
@@ -71,7 +75,8 @@ html
 
 .hidden
   visibility: hidden
-
+.visibility-hidden
+  visibility: hidden
 .display-none
   display: none
 
@@ -96,7 +101,8 @@ html
     background-color: #3369F3
   &_auth
     width: 147.5px
-
+  &:disabled
+    opacity: .5
 img
   display: block
   &_round
