--- a/src/pages/profile/components/passwordForm/passwordForm.hbs
+++ b/src/pages/profile/components/passwordForm/passwordForm.hbs
@@ -1,4 +1,4 @@
-<div class="profile__control-wrapper">
+{{! <div class="profile__control-wrapper">
         <div class="profile__control">
           <button class="profile__change-data mb-1rem">
             Изменить данные
@@ -24,4 +24,21 @@
             Сохранить
           </button>
         </div>
-</div>
+</div> }}
+<form
+  class="profile__form display-none profile__form-password"
+  id="profile-password"
+>
+  <div class="profile__field">
+    <label class="profile__label mb-1rem" for="oldPassword">Старый пароль</label>
+    <input class="profile__input mb-1rem" type="password" name="oldPassword" />
+  </div>
+  <div class="profile__field">
+    <label class="profile__label mb-1rem" for="newPassword">Новый пароль</label>
+    <input class="profile__input mb-1rem" type="password" name="newPassword" />
+  </div>
+  <div class="profile__field">
+    <label class="profile__label" for="">Повторите пароль</label>
+    <input class="profile__input" type="password" />
+  </div>
+</form>
