messages done, next step is bottom menu

--- a/src/pages/chats/chats.sass
+++ b/src/pages/chats/chats.sass
@@ -228,6 +228,8 @@
     height: 28px
     border-radius: 50%
     background-color: #3369F3
+    &:disabled
+      background-color: #ce2424
   &__no-chat-selection
     flex-grow: 1
     display: flex
