--- a/src/pages/chats/components/menuMessages/menu.hbs
+++ b/src/pages/chats/components/menuMessages/menu.hbs
@@ -1,6 +1,6 @@
 <menu class="chats__menu">
-  <div class="chats__menu-content display-none" id="one-chat">
-    {{#each parentsProps.messagesTopMenuButtons}}
+  <div class="chats__menu-content display-none" id="chats">
+    {{#each parentsProps.topMenuButtons}}
       <div class="chats__menue-item" id={{actionId}}>
         <img src={{iconSvg}} alt="#" class="chats__menue-item-img" />
         <p class="chats__menue-item-action">{{actionTitle}}</p>
