--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -30,7 +30,7 @@
     margin: 0 auto;
     text-decoration: none;
     align-items: center;
-
+    cursor: pointer;
     &-to-login {
       text-decoration: none;
     }
