--- a/src/pages/chats/chats.scss
+++ b/src/pages/chats/chats.scss
@@ -57,7 +57,21 @@
       color: #999;
     }
   }
-
+  &__link {
+    min-width: 34px;
+    height: 34px;
+    background-color: #3369f3;
+    border-radius: 50%;
+    margin-right: 10px;
+    display: flex;
+    cursor: pointer;
+  }
+  &__arrow {
+    align-self: center;
+    margin: 0 auto;
+    min-width: 24px;
+    height: 24px;
+  }
   &__link-to-profile {
     color: white;
     text-decoration: none;
