--- a/src/styles/modalWindow.scss
+++ b/src/styles/modalWindow.scss
@@ -63,29 +63,28 @@ html {
     line-height: 9px;
     color: #999;
     margin-bottom: 8px;
-  }
+    &_f-loaded {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 16px;
+      text-align: center;
+      color: #8d8d8d;
+      display: block;
+      margin: 0 auto 60px;
+      cursor: pointer;
+    }
 
-  &_f-loaded {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    color: #8d8d8d;
-    display: block;
-    margin: 0 auto 60px;
-    cursor: pointer;
-  }
-
-  &_file-input {
-    display: block;
-    width: 122px;
-    font-size: 12px;
-    line-height: 16px;
-    text-align: center;
-    text-decoration-line: underline;
-    color: #3369f3;
-    margin: 0 auto 38px;
-    cursor: pointer;
+    &_file-input {
+      display: block;
+      width: 122px;
+      font-size: 12px;
+      line-height: 16px;
+      text-align: center;
+      text-decoration-line: underline;
+      color: #3369f3;
+      margin: 0 auto 38px;
+      cursor: pointer;
+    }
   }
 
   &__text-input {
@@ -103,6 +102,7 @@ html {
     display: flex;
     justify-content: space-between;
     margin-bottom: 14px;
+    margin-top: 20px;
   }
 
   &__warning {
