--- a/src/pages/chats/chats.scss
+++ b/src/pages/chats/chats.scss
@@ -363,6 +363,7 @@
   border-radius: 12px;
   box-shadow: 0 0 6px rgb(0 0 0 / 14%);
   z-index: 1;
+  background: #ffffff;
 }
 .first-stub {
   flex-grow: 1;
