--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -7,6 +7,7 @@
   justify-content: start;
   flex-direction: column;
   align-items: center;
+  position: relative;
 
   &__wrapper {
     display: flex;
