--- a/src/pages/registration/registration.scss
+++ b/src/pages/registration/registration.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: center;
   height: 615px;
+  position: relative;
 
   &__button-wrapper {
     padding-top: 1.6rem;
