--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -2,13 +2,16 @@
   0% {
     transform: rotate(0deg);
   }
+
   50% {
     transform: rotate(180deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
+
 .loader {
   position: absolute;
   border-radius: inherit;
@@ -18,10 +21,12 @@
   justify-content: center;
   align-items: center;
   z-index: 5000;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgb(0 0 0 / 30%);
+
   &__title {
     text-align: center;
   }
+
   &__img {
     animation: rotation 2s infinite linear;
   }
